--- a/package.json
+++ b/package.json
@@ -10,18 +10,30 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "@tailwindcss/vite": "^4.1.6",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "~2",
+    "@tauri-apps/plugin-http": "~2.4.3",
     "@tauri-apps/plugin-log": "~2.4.0",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-sql": "~2.2.0",
     "@tauri-apps/plugin-store": "~2.2.0",
-    "vue": "^3.5.13"
+    "bootstrap-icons": "^1.12.1",
+    "element-plus": "^2.9.10",
+    "tailwindcss": "^4.1.6",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@iconify-json/si": "^1.2.3",
     "@tauri-apps/cli": "^2",
     "@vitejs/plugin-vue": "^5.2.1",
+    "sass-embedded": "^1.87.0",
     "typescript": "~5.6.2",
+    "unplugin-auto-import": "^19.2.0",
+    "unplugin-icons": "^22.1.0",
+    "unplugin-vue-components": "^28.5.0",
     "vite": "^6.0.3",
     "vue-tsc": "^2.1.10"
   },
