--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@quasar/extras": "^1.16.17",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "~2",
     "@tauri-apps/plugin-http": "~2.4.3",
@@ -17,15 +18,17 @@
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-sql": "~2.2.0",
     "@tauri-apps/plugin-store": "~2.2.0",
-    "bootstrap-icons": "^1.12.1",
+    "quasar": "^2.18.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@iconify-json/si": "^1.2.3",
+    "@quasar/vite-plugin": "^1.9.0",
     "@tauri-apps/cli": "^2",
     "@vitejs/plugin-vue": "^5.2.1",
-    "sass-embedded": "^1.87.0",
+    "sass": "1.32.12",
+    "sass-embedded": "^1.80.2",
     "typescript": "~5.6.2",
     "vite": "^6.0.3",
     "vue-tsc": "^2.1.10"
